# Autonomous-Financial-Research-Workstation

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
outputs/: financial_report.md
workstation/components/: analyst.py  charting.py  financials.py  retriever.py
workstation/graph/: builder.py  state.py
